[tool.poetry]
name = "2022-bot"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
motor = "^2.3.0"
jishaku = "^1.19.2"
discord-ext-menus = {git = "https://github.com/oliver-ni/discord-ext-menus.git"}
dnspython = "^2.0.0"
discord-ext-events = {git = "https://github.com/Ext-Creators/discord-ext-events.git"}
durations-nlp = "^1.0.1"
aiogoogle = "^2.0.1"
python-dateutil = "^2.8.1"
httpx = "^0.16.1"
Authlib = "^0.15.3"
starlette = "^0.14.2"
uvicorn = "^0.13.3"
discord-ext-ipc = {git = "https://github.com/Ext-Creators/discord-ext-ipc.git", rev = "main"}
aioredis = "^1.3.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
